# ultiimatedevenv

./: .gitignore  CONTRIBUTING.md  Dockerfile  EMOJI_REMOVAL_COMPLETE.md  FINAL_SETUP_SUMMARY.md  GITHUB_RELEASE_READY.md  GITHUB_SUCCESS.md  LICENSE  QUICK_REFERENCE.md  README.md  README_COMPLETE.md  clean-emojis.sh  docker-compose.specialized.yml  docker-compose.yml  install-advanced-tools.sh  manage.sh  orchestrator.sh  prepare-github-release.sh  remove-emojis.sh  remove_emojis.py  setup-branch-protection.sh  setup-git-hooks.sh  setup.sh  start-dev-session.sh
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: pr-validation.yml
claude-setup/: ADD_NEW_SERVER_GUIDE.md  CLAUDE_SETUP_COMPLETE.md  ENV_CONFIGURATION_COMPLETE.md  FINAL_SETUP_READY.md  NEOVIM_GHOSTTY_FINAL.md  NEOVIM_GHOSTTY_SETUP_COMPLETE.md  README.md  run-setup.sh
claude-setup/configs/: nvim-init.vim
claude-setup/global-config/: mcp_config.json
claude-setup/scripts/: install-claude-setup.sh  setup-neovim.sh  start-dev-layout.sh
claude-setup/templates/: .env_template_master
claude-setup/templates/fastapi-project/: .mcp.json
claude-setup/templates/fullstack-project/: .mcp.json  remove_emojis.py
claude-setup/templates/python-project/: .env_template  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  remove_emojis.py
configs/: .vimrc  .zshrc
configs/.claude-code/: global_mcp_config.json
configs/nvim/: init.lua
dockerfiles/: Dockerfile.datascience  Dockerfile.devops
image/: Dockerfile  Dockerfile_old  claude-config-template.json  dev-help.sh  ghostty-config  nvim-init.lua  start-dev-layout.sh  start-ghostty.sh
image/nvim/: init.vim
workspace/: .env.template  README.md  install-claude-code-with-mcp-v2.sh  zen-mcp-test-examples.md
